--- a/index.html
+++ b/index.html
@@ -1,18 +1,142 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>willdorsett.github.io</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="app.css">
+
+  <title>Museum of Candy</title>
 </head>
 
 <body>
-    <h1>test</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere asperiores nihil quia sit temporibus magni
-        reprehenderit nesciunt architecto accusantium autem, similique obcaecati quod vitae exercitationem placeat quo!
-        Magni, consequatur libero.</p>
+  <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+    <a class="navbar-brand" href="#">CANDY</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks"
+      aria-label="Toggle Navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navLinks">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">TICKETS</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <section class="container-fluid px-0">
+    <div class="row align-items-center">
+      <div class="col-lg-6">
+        <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <img class="img-fluid" src="imgs/hand2.png" alt="this is a ">
+      </div>
+    </div>
+  </section>
+
+  <section class="container-fluid px-0">
+    <div class="row align-items-center content">
+      <div class="col-md-6 order-2 order-md-1">
+        <img class="img-fluid" src="imgs/milk.png" alt="">
+      </div>
+      <div class="col-md-6 text-center order-1 order-md-2 blurb mb-5 mb-md-0">
+        <div class="row justify-content-center">
+          <div class="col-10 col-lg-8">
+            <h2>MUSEUM OF CANDY</h2>
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor sunt excepturi praesentium
+              quod, neque dolorum, nesciunt aperiam sit numquam ad laborum cum iure, natus hic laboriosam? Doloremque
+              quae provident corrupti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, incidunt
+              reprehenderit eligendi consectetur placeat optio. Dolorum odio cum, ad enim doloribus illo deserunt aut
+              excepturi eligendi velit molestias inventore quam?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row align-items-center content">
+      <div class="col-md-6 text-center">
+        <div class="row justify-content-center">
+          <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+            <h2>MUSEUM OF CANDY</h2>
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor sunt excepturi praesentium
+              quod, neque dolorum, nesciunt aperiam sit numquam ad laborum cum iure, natus hic laboriosam? Doloremque
+              quae provident corrupti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, incidunt
+              reprehenderit eligendi consectetur placeat optio. Dolorum odio cum, ad enim doloribus illo deserunt aut
+              excepturi eligendi velit molestias inventore quam?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="imgs/gumball.png" alt="">
+      </div>
+    </div>
+    </div>
+    <div class="row align-items-center content">
+      <div class="col-md-6 order-2 order-md-1">
+        <img class="img-fluid" src="imgs/sprinkles.png" alt="">
+      </div>
+      <div class="col-md-6 text-center order-1 order-md-2 blurb mb-5 mb-md-0">
+        <div class="row justify-content-center">
+          <div class="col-10 col-lg-8">
+            <h2>MUSEUM OF CANDY</h2>
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor sunt excepturi praesentium
+              quod, neque dolorum, nesciunt aperiam sit numquam ad laborum cum iure, natus hic laboriosam? Doloremque
+              quae provident corrupti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, incidunt
+              reprehenderit eligendi consectetur placeat optio. Dolorum odio cum, ad enim doloribus illo deserunt aut
+              excepturi eligendi velit molestias inventore quam?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
+
+  <script>
+    $(function () {
+      $(document).scroll(function () {
+        var $nav = $("#mainNavbar");
+        $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+      });
+    });
+  </script>
 </body>
 
 </html>
