--- a/index.html
+++ b/index.html
@@ -1,142 +1,205 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Prologue by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="app.css">
-
-  <title>Museum of Candy</title>
+	<title>Will Dorsett Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body>
-  <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-    <a class="navbar-brand" href="#">CANDY</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks"
-      aria-label="Toggle Navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navLinks">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ABOUT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">TICKETS</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<body class="is-preload">
 
-  <section class="container-fluid px-0">
-    <div class="row align-items-center">
-      <div class="col-lg-6">
-        <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
-          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-          <h1 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <img class="img-fluid" src="imgs/hand2.png" alt="this is a ">
-      </div>
-    </div>
-  </section>
+	<!-- Header -->
+	<div id="header">
 
-  <section class="container-fluid px-0">
-    <div class="row align-items-center content">
-      <div class="col-md-6 order-2 order-md-1">
-        <img class="img-fluid" src="imgs/milk.png" alt="">
-      </div>
-      <div class="col-md-6 text-center order-1 order-md-2 blurb mb-5 mb-md-0">
-        <div class="row justify-content-center">
-          <div class="col-10 col-lg-8">
-            <h2>MUSEUM OF CANDY</h2>
-            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
-            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor sunt excepturi praesentium
-              quod, neque dolorum, nesciunt aperiam sit numquam ad laborum cum iure, natus hic laboriosam? Doloremque
-              quae provident corrupti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, incidunt
-              reprehenderit eligendi consectetur placeat optio. Dolorum odio cum, ad enim doloribus illo deserunt aut
-              excepturi eligendi velit molestias inventore quam?</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row align-items-center content">
-      <div class="col-md-6 text-center">
-        <div class="row justify-content-center">
-          <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-            <h2>MUSEUM OF CANDY</h2>
-            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
-            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor sunt excepturi praesentium
-              quod, neque dolorum, nesciunt aperiam sit numquam ad laborum cum iure, natus hic laboriosam? Doloremque
-              quae provident corrupti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, incidunt
-              reprehenderit eligendi consectetur placeat optio. Dolorum odio cum, ad enim doloribus illo deserunt aut
-              excepturi eligendi velit molestias inventore quam?</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <img class="img-fluid" src="imgs/gumball.png" alt="">
-      </div>
-    </div>
-    </div>
-    <div class="row align-items-center content">
-      <div class="col-md-6 order-2 order-md-1">
-        <img class="img-fluid" src="imgs/sprinkles.png" alt="">
-      </div>
-      <div class="col-md-6 text-center order-1 order-md-2 blurb mb-5 mb-md-0">
-        <div class="row justify-content-center">
-          <div class="col-10 col-lg-8">
-            <h2>MUSEUM OF CANDY</h2>
-            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
-            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor sunt excepturi praesentium
-              quod, neque dolorum, nesciunt aperiam sit numquam ad laborum cum iure, natus hic laboriosam? Doloremque
-              quae provident corrupti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, incidunt
-              reprehenderit eligendi consectetur placeat optio. Dolorum odio cum, ad enim doloribus illo deserunt aut
-              excepturi eligendi velit molestias inventore quam?</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script>
+		<div class="top">
 
-  <script>
-    $(function () {
-      $(document).scroll(function () {
-        var $nav = $("#mainNavbar");
-        $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
-      });
-    });
-  </script>
+			<!-- Logo -->
+			<div id="logo">
+				<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+				<h1 id="title">Will Dorsett</h1>
+				<p>Fullstack Engineer</p>
+			</div>
+
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a>
+					</li>
+					<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+					<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a>
+					</li>
+				</ul>
+			</nav>
+
+		</div>
+
+		<div class="bottom">
+
+			<!-- Social Icons -->
+			<ul class="icons">
+				<li><a href="https://github.com/willdorsett" class="icon brands fa-github"><span
+							class="label">Github</span></a></li>
+				<li><a href="https://www.linkedin.com/in/william-dorsett-07106b92/"
+						class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+				<li><a href="https://codepen.io/willdorsett" class="icon brands fa-codepen"><span
+							class="label">Email</span></a></li>
+			</ul>
+
+		</div>
+
+	</div>
+
+	<!-- Main -->
+	<div id="main">
+
+		<!-- Intro -->
+		<section id="top" class="one dark cover">
+			<div class="container">
+
+				<header>
+					<h2 class="alt">This is my portfolio</h2>
+					<p>Ligula scelerisque justo sem accumsan diam quis<br />
+						vitae natoque dictum sollicitudin elementum.</p>
+				</header>
+
+				<footer>
+					<a href="#portfolio" class="button scrolly">See My Work</a>
+				</footer>
+
+			</div>
+		</section>
+
+		<!-- Portfolio -->
+		<section id="portfolio" class="two">
+			<div class="container">
+
+				<header>
+					<h2>Portfolio</h2>
+				</header>
+
+				<p>Here is a list of my projects</p>
+
+				<div class="row">
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+							<header>
+								<h3>Yelp Review</h3>
+							</header>
+						</article>
+						<article class="item">
+							<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+							<header>
+								<h3>TBD</h3>
+							</header>
+						</article>
+					</div>
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<header>
+								<h3>Photo Gallary</h3>
+							</header>
+						</article>
+						<article class="item">
+							<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+							<header>
+								<h3>Pricing Panel</h3>
+							</header>
+						</article>
+					</div>
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+							<header>
+								<h3>Calculator</h3>
+							</header>
+						</article>
+						<article class="item">
+							<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+							<header>
+								<h3>TBD</h3>
+							</header>
+						</article>
+					</div>
+				</div>
+
+			</div>
+		</section>
+
+		<!-- About Me -->
+		<section id="about" class="three">
+			<div class="container">
+
+				<header>
+					<h2>About Me</h2>
+				</header>
+
+				<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+
+				<p>Hello, my name is Will Dorsett and I am a fullstack developer. I have just finished a full web
+					development course on Udemy which provided me with knowledge of HTML5, CSS3, JavaScript, AJAX, DOM
+					Manipulation, NodeJS, ExpressJS, REST, SQL, NoSQL, MongoDB, Schema Design, Authentication from
+					scratch, Common Security Issues such as SQL Injection, ESS, Deploying Apps, Cloud Databases, Image
+					Upload and Storage, Maps and Geocoding, and more. <br>
+					This course was originally completed to fill the free time that the pandamic provided but I quickly
+					developed a strong interst in full stack webdevelopment and learning as much as I could.
+				</p>
+
+
+			</div>
+		</section>
+
+		<!-- Contact -->
+		<section id="contact" class="four">
+			<div class="container">
+
+				<header>
+					<h2>Let's work together</h2>
+				</header>
+
+				<div class="col-12">
+					<a href="mailto:william.t.dorsett@gmail.com" class="btn btn-info" role="button"
+						id="contactMe">Contact Me</a>
+				</div>
+			</div>
+			</form>
+
+
+			<!-- <a href="#link" class="btn btn-info" role="button">Link Button</a> -->
+	</div>
+	</section>
+
+	</div>
+
+	<!-- Footer -->
+	<div id="footer">
+
+		<!-- Copyright -->
+		<ul class="copyright">
+			<li>&copy; 2022. All rights reserved.</li>
+			<li>Design: Will Dorsett</a></li>
+		</ul>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
