--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/PhotoSite/Solution/photosite.html " class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
 								<h3>Photo Gallary</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/Pricing-Panel/PricingPanel/PriceTable/index.html " class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
 								<h3>Pricing Panel</h3>
 							</header>
@@ -118,7 +118,7 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/Calculator/Calculator/index.html " class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 							<header>
 								<h3>Calculator</h3>
 							</header>
