--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
 			<div class="container">
 
 				<header>
-					<h2 class="alt">This is my portfolio</h2>
-					<p>Ligula scelerisque justo sem accumsan diam quis<br />
-						vitae natoque dictum sollicitudin elementum.</p>
+					<h2 class="alt">Will Dorsett</h2>
+					<p>Full Stack Engineer</p>
 				</header>
 
 				<footer>
@@ -85,7 +84,7 @@
 					<h2>Portfolio</h2>
 				</header>
 
-				<p>Here is a list of my projects</p>
+				<p>My Projects<br>Click each picture to be brought to the project</br></p>
 
 				<div class="row">
 					<div class="col-4 col-12-mobile">
@@ -104,9 +103,9 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://willdorsett.github.io/PhotoSite/Solution/photosite.html " class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="#" alt="" /></a>
 							<header>
-								<h3>Photo Gallary</h3>
+								<h3>Mock Social</h3>
 							</header>
 						</article>
 						<article class="item">
@@ -124,9 +123,9 @@
 							</header>
 						</article>
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/PhotoSite/Solution/photosite.html " class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3>TBD</h3>
+								<h3>Photo Gallary</h3>
 							</header>
 						</article>
 					</div>
