--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<article class="item">
 							<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3>TBD</h3>
+								<h3>Score Keeper or Museum of Candy</h3>
 							</header>
 						</article>
 					</div>
