--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
 				<header>
 					<h2>Portfolio</h2>
+					<p>This responsive portfolio you're currently viewing was designed, wireframed and ultimately developed using React & Tailwind CSS.</p>
 				</header>
 
 				<p>My Projects<br>Click each picture to be brought to the project</br></p>
