--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" alt="" /></a>
+							<a href="#" alt="" /><img src="images/pic04.jpg" alt="" /></a>
 							<header>
 								<h3>Mock Social</h3>
 							</header>
