--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					<h2>About Me</h2>
 				</header>
 
-				<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+				<a href="#" class="image featured"><img src="images/about-me.jpg" alt="" /></a>
 
 				<p>Hello, my name is Will Dorsett and I am a fullstack developer. I have just finished a full web
 					development course on Udemy which provided me with knowledge of HTML5, CSS3, JavaScript, AJAX, DOM
