--- a/index.html
+++ b/index.html
@@ -145,14 +145,22 @@
 
 				<a href="#" class="image featured"><img src="images/about-me.jpg" alt="" /></a>
 
-				<p>Hello, my name is Will Dorsett and I am a fullstack developer. I have just finished a full web
-					development course on Udemy which provided me with knowledge of HTML5, CSS3, JavaScript, AJAX, DOM
+				<p>I'm a previous chaplain diving into web design.<br> Computers have always been interesting to me, in my childhood I would collect discarded computer parts from the trash to take them apart and learn about them.
+					this eventually developed into an obsession with coding.  I looked into python because I wanted to learn how to code a video game.  Video games qualify as a hobby but borderline on an obsession.  After learning about PyGame,
+					I looked into web development and after finding websites like freecodecamp.org and theodinproject.com, I was hooked and I had to know everything that I could about fulls tack web development.  After looking online, mostly reddit, 
+					I found out about The Web Developer Bootcamp, taught by Colt Steele.  I jumped in shelling out my own money, because this was how I would prove to myself that I was truly ready and willing to dive feet first into this.
+						
+					<br>I unfortunately had to take a break from learning full stack web development as I am a student in a Masters Degree program, between that and a full time job, I didn't have a lot of time to invest in learning full stack development.  Then Covid happened, and I found myself with a lot more free time as I was working from home primarily.  
+					I decided to restart the course to make sure that I didn't miss anything and Colt had revamped the course adding a lot of information. I found that I had been bitten by the bug even harder and found myself staying up late, and utilizing every bit of free tiem that I have to be as prepared as I can be. 
+					I have now finished this course and used the information from the bootcamp, freecodecamp.org and theodinproject.com to develop this website, and the projects list.
+					
+					I am seeking a full-time role where I can contribute my skills both in coding and business to help a company achieve their goals.
+				</p>	
+					<p><b>Skills:</b> HTML5, CSS3, JavaScript, AJAX, DOM
 					Manipulation, NodeJS, ExpressJS, REST, SQL, NoSQL, MongoDB, Schema Design, Authentication from
 					scratch, Common Security Issues such as SQL Injection, ESS, Deploying Apps, Cloud Databases, Image
-					Upload and Storage, Maps and Geocoding, and more. <br>
-					This course was originally completed to fill the free time that the pandamic provided but I quickly
-					developed a strong interst in full stack webdevelopment and learning as much as I could.
-				</p>
+					Upload and Storage, Maps and Geocoding, and more.
+					</p>
 
 
 			</div>
