--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<article class="item">
 							<a href="https://willdorsett.github.io/PhotoSite/Solution/photosite.html " class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3>Photo Gallary</h3>
+								<h3>Forum</h3>
 							</header>
 						</article>
 					</div>
