--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" alt="" /><img src="images/pic04.jpg" alt="" /></a>
+							<a href="https://github.com/willdorsett/Mybook/blob/main/index.php" alt="" /><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3>Mock Social</h3>
+								<h3>Mybook</h3>
 							</header>
 						</article>
 						<article class="item">
