--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="https://github.com/willdorsett/Weather_App/blob/main/Weather_App-master/src/index.js" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3>Yelp Review</h3>
+								<h3>Weather App Using API</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="https://github.com/willdorsett/Score_Keeper/blob/main/ScoreKeeper/index.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3>Score Keeper or Museum of Candy</h3>
+								<h3>Score Keeper</h3>
 							</header>
 						</article>
 					</div>
@@ -124,9 +124,9 @@
 							</header>
 						</article>
 						<article class="item">
-							<a href="https://willdorsett.github.io/PhotoSite/Solution/photosite.html " class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="https://github.com/willdorsett/Rock_Paper_Scissors_Game/blob/main/rock-paper-scissors--master/index.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3>Forum</h3>
+								<h3>Rock Paper Scissors Game</h3>
 							</header>
 						</article>
 					</div>
