--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://github.com/willdorsett/Weather_App/blob/main/Weather_App-master/src/index.js" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/Weather_App/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
 								<h3>Weather App Using API</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="https://github.com/willdorsett/Score_Keeper/blob/main/ScoreKeeper/index.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/Score_Keeper/" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
 								<h3>Score Keeper</h3>
 							</header>
@@ -104,13 +104,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://github.com/willdorsett/Mybook/blob/main/index.php" alt="" /><img src="images/pic04.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/Mybook/" alt="" /><img src="images/pic04.jpg" alt="" /></a>
 							<header>
 								<h3>Mybook</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="https://willdorsett.github.io/Pricing-Panel/PricingPanel/PriceTable/index.html " class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/Pricing-Panel/" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
 								<h3>Pricing Panel</h3>
 							</header>
@@ -118,13 +118,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://willdorsett.github.io/Calculator/Calculator/index.html " class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+							<a href="https://willdorsett.github.io/Calculator/" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 							<header>
 								<h3>Calculator</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="https://github.com/willdorsett/Rock_Paper_Scissors_Game/blob/main/rock-paper-scissors--master/index.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<a href=" https://willdorsett.github.io/Rock_Paper_Scissors_Game/" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
 								<h3>Rock Paper Scissors Game</h3>
 							</header>
