--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="git@github.com:willdorsett/Weather_App.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="Weather_App-master/package.json" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
 								<h3>Weather App Using API</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="git@github.com:willdorsett/Score_Keeper.git" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="ScoreKeeper/index.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
 								<h3>Score Keeper</h3>
 							</header>
@@ -104,13 +104,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="git@github.com:willdorsett/Mybook.git" alt="" /><img src="images/pic04.jpg" alt="" /></a>
+							<a href="Mybook/index.php" alt="" /><img src="images/pic04.jpg" alt="" /></a>
 							<header>
 								<h3>Mybook</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="git@github.com:willdorsett/Pricing-Panel.git" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="PriceTable/index.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
 								<h3>Pricing Panel</h3>
 							</header>
@@ -118,13 +118,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="git@github.com:willdorsett/Calculator.git"><img src="images/pic06.jpg" alt="" /></a>
+							<a href="Calculator/index.html"><img src="images/pic06.jpg" alt="" /></a>
 							<header>
 								<h3>Calculator</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="git@github.com:willdorsett/Rock_Paper_Scissors_Game.git" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="rock-paper-scissors--master/index.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
 								<h3>Rock Paper Scissors Game</h3>
 							</header>
