--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							</header>
 						</article>
 						<article class="item">
-							<a href="PriceTable/index.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="https://github.com/willdorsett/Pricing-Panel.git"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
 								<h3>Pricing Panel</h3>
 							</header>
