--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="Weather_App-master/package.json" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="startup_landing_page/index.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3>Weather App Using API</h3>
+								<h3>Startup Landing Page</h3>
 							</header>
 						</article>
 						<article class="item">
