--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 			<!-- Logo -->
 			<div id="logo">
-				<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+				<span class="image avatar48"><img src="images/Dorsett Development Logo.png" alt="" /></span>
 				<h1 id="title">Will Dorsett</h1>
 				<p>Fullstack Engineer</p>
 			</div>
@@ -90,13 +90,13 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="startup_landing_page/index.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="C:\Users\Will\Documents\Web Development\To Be Deployed Portfolio\For Portfolio Immediate\Weather_App-master\package.json" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
 								<h3>Startup Landing Page</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="ScoreKeeper/index.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="C:\Users\Will\Documents\Web Development\portfolio\startup_landing_page\index.html"image fit"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
 								<h3>Score Keeper</h3>
 							</header>
@@ -104,34 +104,28 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="Mybook/index.php" alt="" /><img src="images/pic04.jpg" alt="" /></a>
+							<a href="C:\Users\Will\Documents\Web Development\To Be Deployed Portfolio\For Portfolio Immediate\mybook\index.php" alt="" /><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3>Mybook</h3>
-							</header>
-						</article>
-						<article class="item">
-							<a href="Pricing-Panel/PriceTable/index.html"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3>Pricing Panel</h3>
+								<h3>Yelpcamp</h3>
 							</header>
 						</article>
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="Calculator/index.html"><img src="images/pic06.jpg" alt="" /></a>
+							<a href="C:\Users\Will\Documents\Web Development\To Be Deployed Portfolio\For Portfolio Immediate\Caalculator\index.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 							<header>
-								<h3>Calculator</h3>
+								<h3>Smart Brain</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="rock-paper-scissors--master/index.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="C:\Users\Will\Documents\Web Development\To Be Deployed Portfolio\For Portfolio Immediate\" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
-								<h3>Rock Paper Scissors Game</h3>
+								<h3>Pricing Panel</h3>
 							</header>
 						</article>
+
 					</div>
 				</div>
-
 			</div>
 		</section>
 
