--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="startup_landing_page/index.html" alt="" /><img src="images/startup_landing_page_image.png" alt=""></a>
+							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Startup Landing Page</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="ScoreKeeper/index.html"image fit"><img src="images/score_keeper_image.png" alt="" /></a>
+							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Score Keeper</h3>
 							</header>
@@ -104,7 +104,7 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" alt="" /><img src="images/pic04.jpg" alt="" /></a>
+							<a href="#" alt="" class="image fit"><img src="images/pic04.jpg" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Yelpcamp</h3>
 							</header>
@@ -112,13 +112,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Smart Brain</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="PriceTable/index.html" class="image fit"><img src="images/pricing_panel_image.png" alt="" /></a>
+							<a href="PriceTable/index.html" class="image fit"><img src="images/pricing_panel_image.png" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Pricing Panel</h3>
 							</header>
