--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" class="img-thumbnail"></a>
+							<a href="SmartBrain/src/App.js" class="image fit"><img src="images/pic06.jpg" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Smart Brain</h3>
 							</header>
