--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 							</header>
 						</article>
 					</div>
-					<div class="col-4 col-12-mobile">
+					<!--<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="#" alt="" class="image fit"><img src="images/pic04.jpg" alt="" class="img-thumbnail"></a>
 							<header>
-								<h3>Yelpcamp</h3>
+								<h3>Yelpcamp</h3> 
 							</header>
 						</article>
-					</div>
+					</div> -->
 					<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="https://willdorsett.github.io/SmartBrain" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail"></a>
