--- a/index.html
+++ b/index.html
@@ -88,13 +88,15 @@
 				<p>My Projects<br>Click each picture to be brought to the project</br></p>
 
 				<div class="row">
-					<div class="col-4 col-12-mobile">
+					<div class="col-3 col-12-mobile">
 						<article class="item">
 							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Startup Landing Page</h3>
 							</header>
 						</article>
+					</div>	
+					<div class="col-3 col-12-mobile">	
 						<article class="item">
 							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail"></a>
 							<header>
@@ -117,14 +119,14 @@
 								<h3>Smart Brain</h3>
 							</header>
 						</article>
+					<!--	
 						<article class="item">
 							<a href="PriceTable/index.html" class="image fit"><img src="images/pricing_panel_image.png" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Pricing Panel</h3>
 							</header>
 						</article>
-
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
