--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
 							</header>
 						</article>
 					</div>	
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="https://willdorsett.github.io/SmartBrain" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail"></a>
+							<header>
+								<h3>Smart Brain</h3>
+							</header>
+						</article>
 					<div class="col-4 col-12-mobile">	
 						<article class="item">
 							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail"></a>
@@ -112,13 +119,13 @@
 							</header>
 						</article>
 					</div> -->
-					<div class="col-4 col-12-mobile">
+				<!--	<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="https://willdorsett.github.io/SmartBrain" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Smart Brain</h3>
 							</header>
-						</article>
+						</article> -->
 					<!--	
 						<article class="item">
 							<a href="PriceTable/index.html" class="image fit"><img src="images/pricing_panel_image.png" alt="" class="img-thumbnail"></a>
