--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 								<h3>Smart Brain</h3>
 							</header>
 						</article>
+					</div>	
 					<div class="col-4 col-12-mobile">	
 						<article class="item">
 							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail"></a>
