--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</div>
 		</section>
 
-		<!-- Portfolio -->
+				<!-- Portfolio -->
 		<section id="portfolio" class="two">
 			<div class="container">
 
@@ -90,7 +90,7 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail"></a>
+							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail" width="" height="300"></a>
 							<header>
 								<h3>Startup Landing Page</h3>
 							</header>
@@ -98,15 +98,15 @@
 					</div>	
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://willdorsett.github.io/SmartBrain" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail"></a>
+							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="500" height="450"></a>
 							<header>
-								<h3>Smart Brain</h3>
+								<h3>Yelpcamp</h3> 
 							</header>
 						</article>
-					</div>	
+					</div>
 					<div class="col-4 col-12-mobile">	
 						<article class="item">
-							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail"></a>
+							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail" width="300" height="300"></a>
 							<header>
 								<h3>Score Keeper</h3>
 							</header>
