--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail" width="" height="300"></a>
 							<header>
 								<h3>Startup Landing Page</h3>
+								<p>Sample startup landing page that allow a visiter to submit email address for future updates</p>
 							</header>
 						</article>
 					</div>	
@@ -100,7 +101,8 @@
 						<article class="item">
 							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="500" height="450"></a>
 							<header>
-								<h3>Yelpcamp</h3> 
+								<h3>Smart Brain</h3>
+								<p>A React App that utilizes a PostgreSQL database to store name, email, password and entries securley and Clarifai API to locate and place a box around faces in photographs</p> 
 							</header>
 						</article>
 					</div>
@@ -109,6 +111,7 @@
 							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail" width="300" height="300"></a>
 							<header>
 								<h3>Score Keeper</h3>
+								<p>App which keeps track of score, stops counting after score was reached and indicates winner</p>
 							</header>
 						</article>
 					</div>
