--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 				<a href="#" class="image featured"><img src="images/about-me.jpg" alt="" /></a>
 
-				<p>	I'm a previous chaplain diving into web design.<br> Computers have always been interesting to me, in my childhood I would collect discarded computer parts from the trash to take them apart and learn about them.
+				<p>	I'm curently working in customer service but I am diving into web design.<br> Computers have always been interesting to me, in my childhood I would collect discarded computer parts from the trash to take them apart and learn about them.
 					this eventually developed into an obsession with coding.  I looked into python because I wanted to learn how to code a video game.  Video games qualify as a hobby but borderline on an obsession.  After learning about PyGame,
 					I looked into web development and after finding websites like freecodecamp.org and theodinproject.com, I was hooked and I had to know everything that I could about fulls tack web development.  After looking online, mostly reddit, 
 					I found out about The Web Developer Bootcamp, taught by Colt Steele.  I jumped in shelling out my own money, because this was how I would prove to myself that I was truly ready and willing to dive feet first into this.</p>
