--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail" width="" height="300"></a>
 							<header>
 								<h3>Startup Landing Page</h3>
-								<p>Sample startup landing page that allow a visiter to submit email address for future updates</p>
+								<p>Sample startup landing page that allow a visitor to submit email address for future updates</p>
 							</header>
 						</article>
 					</div>	
