--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail" width="" height="300"></a>
 							<header>
 								<h3>Startup Landing Page</h3>
-								<p>Sample startup landing page that allow a visitor to submit their email address for future updates</p>
+								<p>Sample startup landing page that allows the user to submit their email address for future updates</p>
 							</header>
 						</article>
 					</div>	
@@ -102,7 +102,7 @@
 							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="500" height="450"></a>
 							<header>
 								<h3>Smart Brain</h3>
-								<p>A React App that utilizes a PostgreSQL database to store name, email, password and entries securley and Clarifai API to locate and place a box around faces in photographs</p> 
+								<p>A React App that utilizes a PostgreSQL database to store name, email, password and entries securley and Clarifai API to locate and place a box around faces in photograph url's submitted by the user</p> 
 							</header>
 						</article>
 					</div>
@@ -111,7 +111,7 @@
 							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail" width="300" height="300"></a>
 							<header>
 								<h3>Score Keeper</h3>
-								<p>App which keeps track of score, stops counting after score was reached and indicates winner</p>
+								<p>App whic allows the user to choose a winning score, keep track of the score, stops counting after user chosen score was reached and indicates to the user the winner</p>
 							</header>
 						</article>
 					</div>
