--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail" width="300" height="300"></a>
 							<header>
 								<h3>Score Keeper</h3>
-								<p>App whic allows the user to choose a winning score, keep track of the score, stops counting after user chosen score was reached and indicates to the user the winner</p>
+								<p>App that allows the user to choose a winning score, keep track of the score, stops counting after user chosen score was reached and indicates to the user the winner</p>
 							</header>
 						</article>
 					</div>
