--- a/PriceTable/index.html
+++ b/PriceTable/index.html
@@ -21,6 +21,7 @@
             </ul>
             <span class="pricing-price">Free</span>
             <a href="#/" class="pricing-button">Sign up</a>
+            <!-- need to update where button directs to -->
         </div>
 
         <div class="pricing-plan">
@@ -32,6 +33,7 @@
             </ul>
             <span class="pricing-price">$150</span>
             <a href="#/" class="pricing-button is-featured">Free trial</a>
+              <!-- need to update where button directs to -->
         </div>
 
         <div class="pricing-plan">
@@ -43,6 +45,7 @@
             </ul>
             <span class="pricing-price">$400</span>
             <a href="#/" class="pricing-button">Free trial</a>
+              <!-- need to update where button directs to -->
         </div>
 
     </div>
