--- a/startup_landing_page/index.html
+++ b/startup_landing_page/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Z0WR5SB75"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7Z0WR5SB75');
+</script>
+
     <title>Startup</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
