--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@
 					</div> -->
 				<!--	<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://willdorsett.github.io/SmartBrain" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail"></a>
+							<a href="#" class="image fit"><img src="" alt="images/pic04" class="img-thumbnail"></a>
 							<header>
-								<h3>Smart Brain</h3>
+								<h3>Filler Text</h3>
 							</header>
 						</article> -->
 					<!--	
 						<article class="item">
-							<a href="PriceTable/index.html" class="image fit"><img src="images/pricing_panel_image.png" alt="" class="img-thumbnail"></a>
+							<a href="robofriends-main/build/index.html" class="image fit"><img src="images/pricing_panel_image.png" alt="" class="img-thumbnail"></a>
 							<header>
-								<h3>Pricing Panel</h3>
+								<h3>Robofriends</h3>
 							</header>
 						</article>
 					</div> -->
