--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 							<a href="robofriends-main/build/index.html" class="image fit"><img src="images/pricing_panel_image.png" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Robofriends</h3>
+								<p>Applicaiton built with React, allows user to utilize search bar which immediately updates serch results of users in database.</p>
 							</header>
 						</article>
 					</div> -->
