--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					</div> -->
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="robofriends-main/build/index.html" class="image fit"><img src="images/pricing_panel_image.png" alt="" class="img-thumbnail"></a>
+							<a href="https://willdorsett.github.io/robofriends/" class="image fit"><img src="images/pricing_panel_image.png" alt="" class="img-thumbnail"></a>
 							<header>
 								<h3>Robofriends</h3>
 								<p>Applicaiton built with React, allows user to utilize search bar which immediately updates serch results of users in database.</p>
