--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 				<!-- Portfolio -->
 		<section id="portfolio" class="two">
-			<div class="container">
+<!--			<div class="container">
 
 				<header>
 					<h2>Portfolio</h2>
@@ -126,7 +126,7 @@
 							</header>
 						</article>
 					</div>
-<!-- 		This is for after finishing YelpCamP, replace below with the 3 up top 		
+ 		This is for after finishing YelpCamP, replace below with the 3 up top 	-->	
 					<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="500" height="450"></a>
@@ -167,7 +167,7 @@
 								<p>App that allows the user to choose a winning score, keep track of the score, stops counting after user chosen score was reached and indicates to the user the winner</p>
 							</header>
 						</article> 
-					</div> -->
+					</div> <!-- -->
 				</div>
 			</div>
 		</section>
