--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 				<!-- Portfolio -->
 		<section id="portfolio" class="two">
-<!--			<div class="container">
+			<div class="container">
 
 				<header>
 					<h2>Portfolio</h2>
@@ -97,7 +97,7 @@
 				</header>
 
 				<p>My Projects<br>Click each picture to be brought to the project</br></p>
-
+<!--
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
