--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					</div>	
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="500" height="450"></a>
+							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail"<!-- width="500" height="450" -->></a>
 							<header>
 								<h3>Smart Brain</h3>
 								<p>A React App that utilizes Node.js, a PostgreSQL database to store name, email, password and entries securley and Clarifai API to locate and place a box around faces in photograph url's submitted by the user</p> 
