--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<p>My Projects<br>Click each picture to be brought to the project</br></p>
 				<div class="row">
 		<!--
-					<div class="col-4 col-12-mobile">
+					<div class="col-3 col-12-mobile">
 						<article class="item">
 							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail" width="" height="300"></a>
 							<header>
@@ -108,16 +108,16 @@
 							</header>
 						</article>
 					</div>	
-					<div class="col-4 col-12-mobile">
+					<div class="col-6 col-12-mobile">
 						<article class="item">
-							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail"<!-- width="500" height="450" -->></a>
+							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail <!--"width="200" height="200" -->></a>
 							<header>
 								<h3>Smart Brain</h3>
 								<p>A React App that utilizes Node.js, a PostgreSQL database to store name, email, password and entries securley and Clarifai API to locate and place a box around faces in photograph url's submitted by the user</p> 
 							</header>
 						</article>
 					</div>
-					<div class="col-4 col-12-mobile">	
+					<div class="col-3 col-12-mobile">	
 						<article class="item">
 							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail" width="300" height="300"></a>
 							<header>
