--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
  		This is for after finishing YelpCamP, replace below with the 3 up top 	-->	
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="200" height="200"></a>
+							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
 								<h3>Smart Brain</h3>
 								<p>A React App that utilizes Node.js, a PostgreSQL database to store name, email, password and entries securley and Clarifai API to locate and place a box around faces in photograph url's submitted by the user</p> 
 							</header>
 						</article>
 						<article class="item">
-							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail" width="200" height="200"></a>
+							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
 								<h3>Startup Landing Page</h3>
 								<p>Sample startup landing page that allows the user to submit their email address for future updates</p>
@@ -145,7 +145,7 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" alt="" class="image fit"><img src="images/pic04.jpg" alt="" class="img-thumbnail"></a>
+							<a href="#" alt="" class="image fit"><img src="images/pic04.jpg" alt="" class="img-thumbnail" width="" height="250"></a>
 							<header>
 								<h3>Yelpcamp</h3>
  								<p>YelpCamp is a website where users can create and review campgrounds. In order to review or create a campground, you must have an account. This project was created using Node. js, Express, MongoDB, and Bootstrap.</p>
@@ -154,14 +154,14 @@
 					</div> -->
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://willdorsett.github.io/robofriends/" class="image fit"><img src="images/robofriends.png" alt="" class="img-thumbnail" width="200" height="200"></a>
+							<a href="https://willdorsett.github.io/robofriends/" class="image fit"><img src="images/robofriends.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
 								<h3>Robofriends</h3>
 								<p>Applicaiton built with React, allows user to utilize search bar which immediately updates serch results of users in database.</p>
 							</header>
 						</article>	
 						<article class="item">
-							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail" width="200" height="200"></a>
+							<a href="ScoreKeeper/index.html"class="image fit"><img src="images/score_keeper_image.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
 								<h3>Score Keeper</h3>
 								<p>App that allows the user to choose a winning score, keep track of the score, stops counting after user chosen score was reached and indicates to the user the winner</p>
