--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						</article>
 					</div>
  		This is for after finishing YelpCamP, replace below with the 3 up top 	-->	
-					<div class="col-3 col-12-mobile">
+					<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="" height="200"></a>
 							<header>
@@ -151,7 +151,7 @@
  								<p>YelpCamp is a website where users can create and review campgrounds. In order to review or create a campground, you must have an account. This project was created using Node. js, Express, MongoDB, and Bootstrap.</p>
 							</header>
 						</article>
-					</div> -->
+					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="https://willdorsett.github.io/robofriends/" class="image fit"><img src="images/robofriends.png" alt="" class="img-thumbnail" width="" height="200"></a>
