--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 				<p>My Projects<br>Click each picture to be brought to the project</br></p>
 				<div class="row">
-		<!--
+		
 					<div class="col-3 col-12-mobile">
 						<article class="item">
 							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt=""  class="img-thumbnail" width="" height="300"></a>
@@ -126,7 +126,7 @@
 							</header>
 						</article>
 					</div>
- 		This is for after finishing YelpCamP, replace below with the 3 up top 	-->	
+ 	<!--	This is for after finishing YelpCamP, replace below with the 3 up top 		
 					<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="https://willdorsett.github.io/SmartBrain" alt="" class="image fit"><img src="images/smartbrain.png" alt="" class="img-thumbnail" width="" height="200"></a>
@@ -167,7 +167,7 @@
 								<p>App that allows the user to choose a winning score, keep track of the score, stops counting after user chosen score was reached and indicates to the user the winner</p>
 							</header>
 						</article> 
-					</div> <!-- -->
+					</div>  -->
 				</div>
 			</div>
 		</section>
