--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 				<p>My Projects<br>Click each picture to be brought to the project</br></p>
 				<div class="row">
-<!--		
+<!--					
 					<div class="col-3 col-12-mobile">
 						<article class="item">
 							<a href="startup_landing_page/index.html" class="image fit" alt=""><img src="images/startup_landing_page_image.png" alt=""  class="img-thumbnail" width="" height="300"></a>
@@ -144,7 +144,8 @@
 							</header>
 						</article>
 					</div>
-<!--					<div class="col-4 col-12-mobile">
+					<div class="col-4 col-12-mobile">
+<!--						
 						<article class="item">
 							<a href="#" alt="" class="image fit"><img src="images/pic04.jpg" alt="" class="img-thumbnail" width="" height="250"></a>
 							<header>
@@ -152,8 +153,8 @@
  								<p>YelpCamp is a website where users can create and review campgrounds. In order to review or create a campground, you must have an account. This project was created using Node. js, Express, MongoDB, and Bootstrap.</p>
 							</header>
 						</article>
-					</div>
- -->	
+ -->					
+					</div>	
 					<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="https://willdorsett.github.io/robofriends/" class="image fit"><img src="images/robofriends.png" alt="" class="img-thumbnail" width="" height="200"></a>
