--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <!--	This is for after finishing YelpCamP, replace below with the 3 up top 	 -->	
 <!--						
 						<article class="item">
-							<a href="#" alt="" class="image fit"><img src="images/pic04.jpg" alt="" class="img-thumbnail" width="" height="250"></a>
+							<a href="#" alt="" class="image fit"><img src="images/yelpcamp.png" alt="" class="img-thumbnail" width="" height="250"></a>
 							<header>
 								<h3>Yelpcamp</h3>
  								<p>YelpCamp is a website where users can create and review campgrounds. In order to review or create a campground, you must have an account. This project was created using Node. js, Express, MongoDB, and Bootstrap.</p>
