--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 						</article>
 					</div>
 					<div class="col-4 col-12-mobile">
-<!--	This is for after finishing YelpCamP, replace below with the 3 up top 	 -->	
-<!--						
+<!--	This is for after finishing YelpCamP, replace below with the 3 up top	
+						
 						<article class="item">
 							<a href="#" alt="" class="image fit"><img src="images/yelpcamp.png" alt="" class="img-thumbnail" width="" height="250"></a>
 							<header>
